http replaced to https

--- a/blog-organic.html
+++ b/blog-organic.html
@@ -13,11 +13,11 @@
         <link rel="shortcut icon" href="favicon.ico">
 
         <!-- Web Fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700,300,400' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700,300,400' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 
         <!-- Icon Fonts -->
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/fontello.css">
         
         <!-- Plugins CSS -->
@@ -35,7 +35,7 @@
 
         <!-- Head JS Libraries -->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="http://maps.google.com/maps/api/js"></script><!-- REQUIRED FOR GOOGLE MAP -->
+        <script src="https://maps.google.com/maps/api/js"></script><!-- REQUIRED FOR GOOGLE MAP -->
     </head>
     <body class="page">
         <!--[if lt IE 7]>
@@ -254,7 +254,7 @@
                                 <div class="section-title style3">
                                     <h1><span>Get</span> In Touch</h1>
                                 </div>
-                                <form id="contact-form" method="post" action="http://organicgourmet.arenaofthemes.com/php/contact.php">
+                                <form id="contact-form" method="post" action="">
                                     <div class="input-container col-md-6">
                                         <input type="text" id="name" name="name" placeholder="Name*" required>
                                     </div>
