--- a/about-organic.html
+++ b/about-organic.html
@@ -35,7 +35,7 @@
 
         <!-- Head JS Libraries -->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="https://maps.google.com/maps/api/js"></script><!-- REQUIRED FOR GOOGLE MAP -->
+        <script src="https://maps.google.com/maps/api/js?key=AIzaSyBcl9B1OZGPEPAQPY4HhJ63eUR5k-RB8zM"></script><!-- REQUIRED FOR GOOGLE MAP -->
     </head>
     <body class="page">
         <!--[if lt IE 7]>
