--- a/index-organic.html
+++ b/index-organic.html
@@ -36,7 +36,7 @@
 
         <!-- Head JS Libraries -->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="https://maps.google.com/maps/api/js"></script><!-- REQUIRED FOR GOOGLE MAP -->
+        <script src="https://maps.google.com/maps/api/js?key=AIzaSyBcl9B1OZGPEPAQPY4HhJ63eUR5k-RB8zM"></script><!-- REQUIRED FOR GOOGLE MAP -->
 
         <link rel="stylesheet" href="js/vendor/fancyBox/jquery.fancybox.css">
     </head>
